# RIC

./: .gitignore  explorer_node.py
GVD/: Cargo.toml
GVD/src/: brushfire.rs  gvd.rs  main.rs  path_panner.rs  temp
GVD/src/util/: mod.rs
PRM/: Cargo.toml
PRM/src/: main.rs  prm.rs
PRM/src/util/: mod.rs
ROS2_Docker/: Dockerfile
bug_algo/: CMakeLists.txt  compile_commands.json
bug_algo/.cache/clangd/index/: bug_0.cpp.56DD08FC152118BE.idx  bug_2.cpp.A586E5B572028BC7.idx  bug_tan.cpp.42518B4C050C5E46.idx
bug_algo/lib/: CMakeLists.txt
bug_algo/src/: CMakeLists.txt  bug_0.cpp  bug_0_new.cpp  bug_1.cpp  bug_2.cpp  bug_tan.cpp  bug_tan_new.cpp  main.cpp
kalman/: kalman.m  kalman.mlx
mobile_robot_ws/: commands.md
mobile_robot_ws/src/articubot_one/: package.xml
mobile_robot_ws/src/articubot_one/launch/: launch_robot.launch.py
mobile_robot_ws/src/mobile_robot/: CMakeLists.txt  package.xml
mobile_robot_ws/src/mobile_robot/launch/: gazebo_model.launch.py
mobile_robot_ws/src/mobile_robot/model/: robot.gazebo  robot.xacro
mobile_robot_ws/src/mobile_robot/parameters/: bridge_parameters.yaml
particle-filter/: Cargo.toml  ideas.md
particle-filter/src/: main.rs  map.rs  particles.rs  robot.rs  transform.rs  util.rs
ros_ws/src/explorer/: Cargo.toml  package.xml
ros_ws/src/explorer/src/: main.rs
ros_ws/src/ros2/geographic_msgs/: CMakeLists.txt  package.xml
ros_ws/src/ros2/navigation2/: CMakeLists.txt
